; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_util.c_sati_ata_idle_immediate_unload_construct.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_util.c_sati_ata_idle_immediate_unload_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ATA_IDLE_IMMED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sati_ata_idle_immediate_unload_construct(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @sati_cb_get_h2d_register_fis_address(i8* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @ATA_IDLE_IMMED, align 4
  %10 = call i32 @sati_set_ata_command(i32* %8, i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @sati_set_ata_features(i32* %11, i32 68)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @sati_set_ata_sector_count(i32* %13, i32 0)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @sati_set_ata_lba_high(i32* %15, i32 85)
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @sati_set_ata_lba_mid(i32* %17, i32 78)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @sati_set_ata_lba_low(i32* %19, i32 76)
  %21 = load i8*, i8** %3, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @sati_ata_non_data_command(i8* %21, i32* %22)
  ret void
}

declare dso_local i32* @sati_cb_get_h2d_register_fis_address(i8*) #1

declare dso_local i32 @sati_set_ata_command(i32*, i32) #1

declare dso_local i32 @sati_set_ata_features(i32*, i32) #1

declare dso_local i32 @sati_set_ata_sector_count(i32*, i32) #1

declare dso_local i32 @sati_set_ata_lba_high(i32*, i32) #1

declare dso_local i32 @sati_set_ata_lba_mid(i32*, i32) #1

declare dso_local i32 @sati_set_ata_lba_low(i32*, i32) #1

declare dso_local i32 @sati_ata_non_data_command(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
